# hello-mandelbrot

./: Cargo.toml
opencl/: add.ocl
rust/: main.rs  mandelbrot.rs
src/: bin.rs  main.rs  mandelbrot.rs
